fix wrap in tex /notes/2y1s/calculus/consistency-in-metric-spaces/

--- a/templates/note/src/css/styles.css
+++ b/templates/note/src/css/styles.css
@@ -47,7 +47,7 @@ p.t-large {
     display: flex;
     align-items: center;
     padding: 10px 0px;
-    text-wrap: nowrap;
+    /* text-wrap: nowrap; */
     overflow-x: auto;
 }
 
